--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <body>
       <script>
          setTimeout(function(){
-            window.location.href = 'https://thatformworks.pythonanywhere.com' + window.location.pathname;
+            window.location.href = 'https://thatformworks.pythonanywhere.com';
          }, 1000);
       </script>
 </body>
